[package]
name = "jobpool"
version = "0.1.5"
authors = ["Darshan Parajuli <parajulidarshan@gmail.com>"]
description = "A simple fixed-size thread pool library"
repository = "https://github.com/darshanparajuli/jobpool"
readme = "README.md"
keywords = ["threadpool", "threads", "multi-threading", "jobpool", "concurrency"]
categories = ["concurrency"]
license = "MIT"

[dependencies]
